# local-llm-autotune

./: .coverage  .dockerignore  .env.example  .gitignore  AGENT_BENCHMARK.md  CHANGELOG.md  Dockerfile  Dockerfile.autotune  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  proof_combined.json  proof_results.json  proof_results_gemma4.json  proof_results_qwen3.json  proof_results_v2.json  pyproject.toml  resource_results.json  setup.sh  stress_results.json  stress_results_fast.json
.github/: FUNDING.yml
.github/workflows/: docker.yml  publish.yml  test.yml
Formula/: llm-autotune.rb
autotune/: __init__.py  _ollama.py  cli.py
autotune/api/: __init__.py  admin.py  auth.py  chat.py  conversation.py  ctx_utils.py  hardware_tuner.py  kv_manager.py  local_models.py  model_guard.py  model_selector.py  ollama_pull.py  profiles.py  running_models.py  security_log.py  server.py  thinking.py
autotune/api/backends/: __init__.py  base.py  chain.py  mlx_backend.py  openai_compat.py
autotune/bench/: __init__.py  agent_bench.py  agent_types.py  bench_cmd.py  compare.py  proof_suite.py  quick_proof.py  runner.py  user_bench.py  user_metrics.py
autotune/config/: __init__.py  generator.py  user_config.py
autotune/context/: __init__.py  budget.py  classifier.py  compressor.py  extractor.py  window.py
autotune/dashboard/: metrics.py  router.py
autotune/dashboard/static/: index.html
autotune/db/: __init__.py  fingerprint.py  storage_prefs.py  store.py
autotune/hardware/: __init__.py  profiler.py  ram_advisor.py
autotune/hub/: __init__.py  fetcher.py
autotune/memory/: __init__.py  estimator.py  noswap.py
autotune/metrics/: __init__.py  ollama_client.py  vram.py
autotune/models/: __init__.py  catalog.py  catalog_updater.py  quality.py  registry.py
autotune/output/: __init__.py  formatter.py
autotune/recall/: __init__.py  embedder.py  extractor.py  manager.py  store.py
autotune/session/: __init__.py  advisor.py  controller.py  dashboard.py  monitor.py  types.py
autotune/telemetry/: __init__.py  client.py  consent.py  events.py  schema.sql
autotune/ttft/: __init__.py  optimizer.py
docs/: team-tls.md
helm/autotune/: Chart.yaml  values.yaml
helm/autotune/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
nginx/: autotune.conf
scripts/: README.md  agent_bench.py  benchmark.py  create_supabase_schema.py  proof.py  proof_report.py  proof_suite.py  resource_test.py  run_full_benchmark.py  stress_test.py  user_bench.py
tests/: conftest.py  test_cli_smoke.py  test_cli_start_gate.py  test_context_budget.py  test_context_classifier.py  test_context_compressor.py  test_context_extractor.py  test_ctx_utils.py  test_dashboard_auth.py  test_dashboard_settings.py  test_db_settings.py  test_db_storage_prefs.py  test_db_store.py  test_gateway_security.py  test_kv_manager.py  test_model_guard.py  test_model_selector.py  test_noswap.py  test_ollama_integration.py  test_profiles.py  test_proof_suite.py  test_recall_extractor.py  test_recall_store.py  test_server_api.py  test_server_utils.py  test_session_advisor.py  test_setup_wizard.py  test_ttft_optimizer.py  test_user_config.py  test_user_experience.py
website/: package-lock.json
website/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
website/app/commands/: page.tsx
website/app/components/: CopyButton.tsx
website/app/install/: page.tsx
website/app/what-we-do/: page.tsx
