[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-autotune"
version = "0.1.1"
description = "39% faster TTFT, 67% less KV cache, zero config — autotune optimises local LLMs on Ollama, LM Studio, and MLX"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tanav Chinthapatla", email = "tanavc1@users.noreply.github.com" },
]
keywords = [
    "llm", "ollama", "mlx", "inference", "optimization", "apple-silicon",
    "local-ai", "local-llm", "ttft", "kv-cache", "qwen", "gemma", "llama",
    "openai-compatible", "inference-server", "latency", "memory-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "psutil>=5.9",
    "rich>=13.0",
    "py-cpuinfo>=9.0",
    "fastapi>=0.110",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/tanavc1/local-llm-autotune"
Repository = "https://github.com/tanavc1/local-llm-autotune"
"Bug Tracker" = "https://github.com/tanavc1/local-llm-autotune/issues"
Changelog = "https://github.com/tanavc1/local-llm-autotune/releases"

[project.optional-dependencies]
# Apple Silicon acceleration — install with: pip install llm-autotune[mlx]
mlx = ["mlx-lm>=0.21"]
# Development / testing — install with: pip install llm-autotune[dev]
dev = [
    "pytest>=7.4", 
    "pytest-asyncio>=0.23", 
    "pytest-cov>=4.1", 
]

[project.scripts]
autotune = "autotune.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["autotune"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["autotune"]
omit = ["autotune/api/backends/mlx_backend.py"]  # requires mlx hardware

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
