[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-autotune"
version = "1.0.0"
description = "39% faster TTFT, 67% less KV cache, zero config — autotune optimises local LLMs on Ollama, LM Studio, and MLX"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tanav Chinthapatla", email = "tanavc1@users.noreply.github.com" },
]
keywords = [
    "llm", "ollama", "mlx", "inference", "optimization", "apple-silicon",
    "local-ai", "local-llm", "ttft", "kv-cache", "qwen", "gemma", "llama",
    "openai-compatible", "inference-server", "latency", "memory-optimization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "psutil>=5.9",
    "rich>=13.0",
    "py-cpuinfo>=9.0",
    "fastapi>=0.110",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/tanavc1/local-llm-autotune"
Repository = "https://github.com/tanavc1/local-llm-autotune"
"Bug Tracker" = "https://github.com/tanavc1/local-llm-autotune/issues"
Changelog = "https://github.com/tanavc1/local-llm-autotune/releases"

[project.optional-dependencies]
# Apple Silicon acceleration — install with: pip install llm-autotune[mlx]
mlx = ["mlx-lm>=0.21"]
# Development / testing — install with: pip install llm-autotune[dev]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "scipy>=1.11",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-psutil>=5.9",
    "httpx>=0.27",
    "fastapi[all]>=0.110",
]

[project.scripts]
autotune = "autotune.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["autotune"]

[tool.hatch.build.targets.sdist]
include = [
    "autotune/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["autotune"]
omit = [
    "autotune/api/backends/mlx_backend.py",  # requires mlx hardware
    "autotune/cli.py",                        # CLI integration — requires live Ollama
    "autotune/api/chat.py",                   # terminal REPL — requires live Ollama
    "autotune/api/ollama_pull.py",            # requires live Ollama
    "autotune/api/local_models.py",           # requires live Ollama
    "autotune/bench/*.py",                    # benchmark suite — requires live Ollama
    "autotune/hub/fetcher.py",                # requires network / HuggingFace
    "autotune/recall/manager.py",             # requires live Ollama
    "autotune/recall/embedder.py",            # requires live Ollama
    "autotune/session/controller.py",         # terminal UI — requires interactive session
    "autotune/session/dashboard.py",          # terminal UI — requires interactive session
    "autotune/session/monitor.py",            # terminal UI — requires interactive session
    "autotune/output/formatter.py",           # Rich terminal rendering — requires live console
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter, not enforced in CI
    "F401",   # unused imports in __init__ re-exports
    "E741",   # ambiguous variable name (l, O, I) — common in math-heavy code
    "E402",   # module-level import not at top — intentional deferred imports throughout
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
no_error_summary = true
